# recls

./: .gitignore  CHANGES.txt  CMakeLists.txt  HISTORY.md  INSTALL.md  NEWS.md  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
cmake/: TargetMacros.cmake
examples/: CMakeLists.txt
examples/c/example_c_1/: CMakeLists.txt  example_c_1.c
examples/c/example_c_2/: CMakeLists.txt  example_c_2.c
examples/c/example_c_3/: CMakeLists.txt  example_c_3.c
examples/c/example_c_4/: CMakeLists.txt  example_c_4.c
examples/c/example_c_5/: CMakeLists.txt  example_c_5.c
examples/c/example_c_6/: CMakeLists.txt  example_c_6.c
examples/c/example_c_7/: CMakeLists.txt  example_c_7.c
examples/c/example_c_8/: CMakeLists.txt  example_c_8.c
examples/cpp/example_cpp_1/: CMakeLists.txt  example_cpp_1.cpp
examples/cpp/example_cpp_2/: CMakeLists.txt  example_cpp_2.cpp
examples/cpp/example_cpp_3/: CMakeLists.txt  example_cpp_3.cpp
include/recls/: assert.h  ftp.h  recls.h  unix.h  windows.h
include/recls/cpp/: common.hpp  (+2 more)
src/: CMakeLists.txt  ReclsFileSearch.cpp  ReclsFileSearch.hpp  ReclsFileSearchDirectoryNode.cpp  ReclsFtpSearch.hpp  ReclsFtpSearchDirectoryNode_windows.cpp  ReclsFtpSearch_windows.cpp  api.entryinfo.cpp  api.error.cpp  api.extended.cpp  api.search.cpp  api.util.combine_paths.cpp  api.util.create_directory.cpp  api.util.derive_relative_path.cpp  api.util.get_file_sizes.cpp  api.util.remove_directory.cpp  api.util.squeeze_path.cpp  api.util.stat.cpp  api.windows.cpp  impl.api.search.cpp  impl.atomic.h  impl.fileinfo.cpp  impl.fileinfo.unix.cpp  impl.fileinfo.windows.cpp  impl.root.h  impl.snprintf.cpp  impl.trace.cpp  impl.trace.h  impl.util.cpp  impl.util.h  incl.stlsoft.h
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/test.component.util.cpp.create_directory/: CMakeLists.txt  test.component.util.cpp.create_directory.cpp
test/component/test.component.util.cpp.is_socket/: CMakeLists.txt  entry.cpp
test/component/test.component.util.cpp.remove_directory/: CMakeLists.txt  test.component.util.cpp.remove_directory.cpp
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.cpp_api/: CMakeLists.txt  test.scratch.cpp_api.cpp
test/scratch/test.scratch.links/: CMakeLists.txt  test.scratch.links.cpp
test/scratch/test.scratch.search.1/: CMakeLists.txt
test/scratch/test.scratch.with_pantheios/: CMakeLists.txt  test.scratch.with_pantheios.cpp
test/scratch/test_c_1/: CMakeLists.txt  test_c_1.c
test/unit/test.unit.api.combine_paths/: CMakeLists.txt  test.unit.api.combine_paths.c
test/unit/test.unit.api.create_directory/: CMakeLists.txt  test.unit.api.create_directory.c
test/unit/test.unit.api.squeeze_path/: CMakeLists.txt  test.unit.api.squeeze_path.c
test/unit/test.unit.api.stat/: CMakeLists.txt  test.unit.api.stat.c
test/unit/test.unit.c.retcodes/: CMakeLists.txt  test.unit.c.retcodes.c
test/unit/test.unit.cpp.combine_paths/: CMakeLists.txt  test.unit.cpp.combine_paths.cpp
test/unit/test.unit.cpp.derive_relative_path/: CMakeLists.txt  test.unit.cpp.derive_relative_path.cpp
test/unit/test.unit.cpp.retcodes/: CMakeLists.txt  test.unit.cpp.retcodes.cpp
test/unit/test.unit.cpp.squeeze_path/: CMakeLists.txt  test.unit.cpp.squeeze_path.cpp
(+3 files in other folders)
